# Neuro-Load-Reduction

./: CMakeLists.txt  README.md
documents/: presentation-Idea.key  presentation-technical.key
lib/FFmpeg/: CMakeLists.txt
src/: main.cpp
src/entity/: Audio.hpp  Media.hpp  MediaBuilder.hpp  MediaType.hpp  Video.hpp
src/header/: AudioEditor.h  Display.h  FileLoader.h  MediaManager.h  SceneEditor.h  VideoEditor.h
src/source/: AudioEditor.cpp  Display.cpp  FileLoader.cpp  MediaManager.cpp  SceneEditor.cpp  VideoEditor.cpp
src/utils/: Log.cpp  Log.h  Timer.hpp  UserInterface.cpp  UserInterface.h
